<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textView"
            android:padding="10dp"
            android:id="@+id/include_btn_back"
            android:text="@string/btn_back"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppText"
            android:gravity="center"
            android:padding="10dp"

            android:text="@string/app_title"/>
        <TextView
            style="@style/textView"
            android:padding="10dp"
            android:id="@+id/include_btn_haveUploaded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_upload"/>
    </LinearLayout>

</LinearLayout>
