<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/include_title"
        layout="@layout/include_text"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_log"
            style="@style/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/app_log" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_log"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/text_phone" />

            <EditText

                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="31dp"
                android:background="@null"
                android:hint="请输入手机号" />
        </LinearLayout>

        <include layout="@layout/include_view"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/text_log"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/text_code" />

            <EditText
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_horizontal"

                android:hint="请输入手机号" />

            <Button
                android:layout_width="wrap_content"
                android:textColor="#FFFFFF"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/btnstyle"
                android:text="获取验证码" />
        </LinearLayout>

        <include layout="@layout/include_view"></include>

        <Button
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/btnstyle"
            android:text="登录" />

    </LinearLayout>

</RelativeLayout>
